Fixed box alignment

--- a/css/index.css
+++ b/css/index.css
@@ -99,7 +99,7 @@ p {
 .middle-content .boxes {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .middle-content .boxes .box {
